--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
-.container{ 
-  padding:20px;
-  margin:20px;
+.container{
+  padding:0px;
+  margin:auto;
+  width: 100%;
+  background-color:#393b47;
 }
-.multi-img{
-  border:1px #ccc solid;
+.box1{
   text-align:center;
   width: 1000px;
   margin: auto;
+  padding: 20px 0px;
+  color: white;
 }
 .list {
   list-style: none;
@@ -46,17 +49,17 @@
 }
 .list2 img{
   padding: 10px;
-  width:80px;
+  width:100px;
   margin: auto;
 }
-.main {
+.box2 {
   display: flex;
-  border:1px #ccc solid;
   text-align: center; 
   width: 1000px;
   margin: auto;
   background-color: #ffffff;
   padding: 20px 0px;
+  border-top: 3px solid #c44a3b ;
 }
 .section-one{
   flex:1;
@@ -67,7 +70,7 @@
 .section-three{
   flex:1;
 }
-.based {
+.box3 {
   text-align: center;
   width: 1000px;
   margin: auto;
@@ -76,7 +79,7 @@
   font-style: italic;
   padding: 10px 0px;
 }
-.middle-head{
+.box4{
   width: 1000px;
   margin: auto;
   color: white;
@@ -97,7 +100,7 @@
 .img-box{
   flex:1;
 }
-.option {
+.box5 {
   display: flex;
   text-align: center;
   width: 1000px;
@@ -112,7 +115,7 @@
 .img-box2{
   flex:1; 
 }
-.head {
+.box6 {
   display: flex;
   text-align: center;
   width: 1000px;
@@ -127,11 +130,123 @@
 .img-box3{
   flex:1; 
 }
-.contact {
+.box7 {
   text-align: center;
   width: 1000px;
   margin: auto;
   background-color: #c44a3b;
   color: white;
-  padding: 10px 0px;
+  padding: 20px 0px;
 }
+.box8{
+  text-align: center;
+  width: 1000px;
+  margin: auto;
+  background-color: white;
+  padding: 10px 0px;
+  
+}
+
+/*tablet*/
+@media only screen and (max-width: 900px) {
+  .container {
+      background-color: #c44a3b ;
+  }
+}
+/*mobile*/
+@media only screen and (max-width: 450px) {
+  .container {
+      background-color:  #c44a3b;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .box1 {
+      background-color: #c44a3b;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .box1{
+    width:100%
+  }
+  .block-one{
+    display: none;
+  }
+  .box2{
+    width: 100%;
+    
+  }
+  .box3{
+    width: 100%;
+  }
+  .box4 {
+    width:100%;
+  }
+  .box5{
+    width:100%;
+    flex-direction: column-reverse;
+  }
+  .box6{
+    width: 100%;
+    flex-direction: column;
+  }
+  .box7{
+    width: 100%;
+  }.box8{
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 900px) {
+  .box1{
+    width:100%;
+  }
+  .box2{
+    width: 100%;
+    flex-direction: column;
+  }
+  .box3{
+    width: 100%;
+  }
+  .box4 {
+    width:100%;
+  }
+  .box5{
+    width:100%;
+    flex-direction: column-reverse;
+  }
+  .box6{
+    width: 100%;
+    flex-direction: column;
+  }
+  .box7{
+    width: 100%;
+  }.box8{
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  .box1{
+    width:100%;
+  }
+  .box2{
+    width: 100%;
+  }
+  .box3{
+    width: 100%;
+  }
+  .box4 {
+    width:100%;
+  }
+  .box5{
+    width:100%;
+  }
+  .box6{
+    width: 100%;
+  }
+  .box7{
+    width: 100%;
+  }.box8{
+    width: 100%;
+  }
+}
+
+
