--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Titillium Web', sans-serif
+}
+
 .container{
   padding:0px;
   margin:auto;
@@ -6,10 +10,14 @@
 }
 .box1{
   text-align:center;
-  width: 1000px;
+  width: 100%;
   margin: auto;
   padding: 20px 0px;
   color: white;
+  background: url(https://images.unsplash.com/photo-1490222939321-2a267366a124?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c80c340480defc8fa59721cd1a2cf135&auto=format&fit=crop&w=1950&q=80);
+  background-position: -600px 0px;
+  background-repeat: no-repeat;
+  background-color: #3f3e38;
 }
 .list {
   list-style: none;
@@ -29,8 +37,13 @@
 }
 .App {
   text-align: center;
-  display:flex;
+  display: -ms-flexbox;
+  display: flex;
   clear: both;
+  width: 380px;
+  margin-left: 50%;
+  margin-top: 200px;
+  margin-bottom: 200px;
 }
 .first-img{
   flex:1;
@@ -48,14 +61,13 @@
   clear: both;
 }
 .list2 img{
-  padding: 10px;
-  width:100px;
+  padding: 5px;
+  height: 50px;
   margin: auto;
 }
 .box2 {
   display: flex;
   text-align: center; 
-  width: 1000px;
   margin: auto;
   background-color: #ffffff;
   padding: 20px 0px;
@@ -70,9 +82,27 @@
 .section-three{
   flex:1;
 }
+.obImg{
+  background: #c4493b;
+  padding: 15px;
+  width: 25px;
+  border-radius: 50px;
+}
+.cpImg{
+  background: #c4493b;
+  padding: 15px;
+  width: 25px;
+  border-radius: 50px;
+}
+.worldImg{
+  background: #c4493b;
+  padding: 15px;
+  width: 25px;
+  border-radius: 50px;
+}
+
 .box3 {
   text-align: center;
-  width: 1000px;
   margin: auto;
   background-color: #c44a3b;
   color: white;
@@ -86,16 +116,30 @@
   background-color: #393b47;
   padding: 20px 0px;
 }
-.works{
-  display: flex;
-  text-align: center;
-}
 .header {
   flex:1;
   text-align: center;
 }
+.works{
+  display: flex;
+  text-align: center;
+}
+.itworks{ 
+  display: flex;
+  flex: 1
+}
+.img-go{
+  padding-top: 5px;
+  margin-left: 5px;
+  background: #c4493b;
+  padding: 0px;
+  width: 25px;
+  margin-bottom: 200px;
+}
 .inform{
-  flex:1;
+  text-align: left;
+  margin-top: -20px;
+  margin-left: 10px;
 }
 .img-box{
   flex:1;
@@ -103,36 +147,56 @@
 .box5 {
   display: flex;
   text-align: center;
-  width: 1000px;
   margin: auto;
   color: white;
   background-color:#2b2f37;
   padding: 20px 0px;
+  width: 1000px
 }
 .img-box1{
   flex:1;
 }
 .img-box2{
+  display: flex;
   flex:1; 
 }
+.img-go1{
+  padding-top: 5px;
+  margin-left: 5px;
+}
+.inform1{
+  text-align: left;
+  margin-top: -20px;
+  margin-left: 10px;
+}
+
 .box6 {
   display: flex;
   text-align: center;
-  width: 1000px;
   margin: auto;
   color: white;
   background-color:#393b47;
   padding: 20px 0px;
+  width: 1000px;
 }
 .text{
+  display: flex;
   flex:1;
+}
+.img-go2{
+  padding-top: 5px;
+  margin-left: 5px;
+}
+.inform2{
+  text-align: left;
+  margin-top: -20px;
+  margin-left: 10px;
 }
 .img-box3{
   flex:1; 
 }
 .box7 {
   text-align: center;
-  width: 1000px;
   margin: auto;
   background-color: #c44a3b;
   color: white;
@@ -140,7 +204,6 @@
 }
 .box8{
   text-align: center;
-  width: 1000px;
   margin: auto;
   background-color: white;
   padding: 10px 0px;
