--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,7 @@ body {
   width: 25px;
   border-radius: 50px;
 }
-.worldImg{
+.worldImg{ 
   background: #c4493b;
   padding: 15px;
   width: 25px;
@@ -109,8 +109,9 @@ body {
   font-style: italic;
   padding: 10px 0px;
 }
-.box4{
 
+.box4{
+  width: 1000px;
   margin: auto;
   color: white;
   background-color: #393b47;
@@ -156,6 +157,7 @@ body {
   color: white;
   background-color:#2b2f37;
   padding: 20px 0px;
+  width:1000px;
   
 }
 .img-box1{
@@ -190,6 +192,7 @@ body {
   color: white;
   background-color:#393b47;
   padding: 20px 0px;
+  width:1000px;
  
 }
 .text{
@@ -249,7 +252,7 @@ input{
   width: 150px;
 }
 .sub{
-  margin-right: 85px;
+  margin-right: 62px;
 }
 
 .box8{
@@ -257,6 +260,14 @@ input{
   margin: auto;
   background-color: white;
   padding: 10px 0px;
+}
+
+.submit-btn {
+  color: #000;
+  background: #ffffff;
+  padding: 15px;
+  font-size: 13px;
+  margin-top: 10px;  
 }
 
 
@@ -277,40 +288,7 @@ input{
       background-color: #c44a3b;
   }
 }*/
-@media only screen and (max-width: 450px) {
-  .box1{
-    width:100%;
-    background-position: -805 px 0px;
-    flex-direction: column;
-  }
-  .box2{
-    width: 100%;
-    
-  }
-  .box3{
-    width: 100%;
-  }
-  .box4 {
-    width:100%;
-    flex-direction: column;
-  }
-  .works{
-    flex-direction: column;
-  }
-  .box5{
-    width:100%;
-    flex-direction: column-reverse;
-  }
-  .box6{
-    width: 100%;
-    flex-direction: column;
-  }
-  .box7{
-    width: 100%;
-  }.box8{
-    width: 100%;
-  }
-}
+
 
 @media only screen and (max-width: 1200px) {
   .box1{
@@ -328,7 +306,7 @@ input{
     width:100%;
   }
   .box5{
-    width:100%;
+    width:1000px;
   }
   .box6{
     width: 100%;
@@ -342,7 +320,7 @@ input{
 @media only screen and (max-width: 900px) {
   .box1{
     width:100%;
-    background-position: -795px 0px;
+    background-position: -844px 0px;
     flex-direction: column;
   }
   .box2{
@@ -373,4 +351,72 @@ input{
   }
 }
 
+@media only screen and (max-width: 450px) {
+  .App {
+    width: 100%;
+    margin: 0px;
+    margin-bottom: 20px;    
+  }
+  .box1{
+    width: 100%;
+    background-position: -192px 70px;
+    flex-direction: column;
+    background-repeat: inherit;
+    background-size: 802px;
+  }
 
+  .box1 .App .block-one h3 {
+    display: none;
+  }
+  .box1 .App .block-one p {
+    display: none;
+  }
+  .box1 .App .block-one ul {
+    margin-top: 260px
+  }
+
+  
+  .box2{
+    width: 100%;
+    padding: 10px 30px;
+    box-sizing: border-box;
+    
+  }
+  .box3{
+    width: 100%;
+    padding: 10px 30px;
+    box-sizing: border-box;
+  }
+  .box4 {
+    width:100%;
+    flex-direction: column;
+  }
+  .works{
+    flex-direction: column;
+  }
+
+  .itworks, .img-box2, .text {
+    flex-direction: column;
+  }
+
+  .itworks .inform,
+  .img-box2 .inform1,
+  .text .inform2{
+    text-align: center;
+  }
+
+  .box5{
+    width:100%;
+    flex-direction: column-reverse;
+  }
+  .box6{
+    width: 100%;
+    flex-direction: column;
+  }
+  .box7{
+    width: 100%;
+  }
+  .box8{
+    width: 100%;
+  }
+}
